<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <!--barrita de color-->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="#E91E63"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/myApp"
        />

    <!--LinearLayout imagenes-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <!--Imagenes-->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ucaldas"
            android:layout_margin="3dp"
            />
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/mision_tic"
            android:layout_margin="3dp"
            />

    </LinearLayout>

    <!--campos de texto-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <!--Usuario-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_username"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="example@email.com"
            android:textSize="25sp"/>

        <!--Password-->
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="25sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your Password"
            android:textSize="25sp"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="text_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>



        <CheckBox android:id="@+id/cboxTermCond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:onClick="onCheckboxClicked"/>


        <!--Boton Login-->
        <Button
            android:id="@+id/btnLogin"
            android:onClick="onLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LogIn"
            />

    </LinearLayout>

</LinearLayout>
